Intermittent Hit MOZ_CRASH(already mutably borrowed) at /builds/worker/checkouts/gecko/third_party/rust/atomic_refcell/src/lib.rs:122 | single tracking bug
Categories
(Core :: CSS Parsing and Computation, defect, P3)
Tracking
()
People
(Reporter: intermittent-bug-filer, Assigned: smayya)
References
(Blocks 1 open bug, Regression, )
Details
(4 keywords)
Crash Data
Attachments
(1 file)
Filed by: archaeopteryx [at] coole-files.de
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=451869682&repo=try
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/CjINCvjNTLiAYTfe-wPouA/runs/0/artifacts/public/logs/live_backing.log
[task 2024-03-22T12:20:22.083Z] 12:20:22 INFO - TEST-START | dom/html/test/test_viewport_resize.html
[task 2024-03-22T12:20:22.106Z] 12:20:22 INFO - GECKO(7916) | [Parent 5384, Main Thread] WARNING: WebProgress Ignored: no longer current window global: file /builds/worker/checkouts/gecko/dom/ipc/BrowserParent.cpp:3143
[task 2024-03-22T12:20:22.157Z] 12:20:22 INFO - GECKO(7916) | ### XPCOM_MEM_BLOAT_LOG defined -- logging bloat/leaks to C:\Users\task_171110823745108\AppData\Local\Temp\tmp4crkj_tr.mozrunner\runtests_leaks_tab_pid7980.log
[task 2024-03-22T12:20:22.236Z] 12:20:22 INFO - GECKO(7916) | Hit MOZ_CRASH(already mutably borrowed) at /builds/worker/checkouts/gecko/third_party/rust/atomic_refcell/src/lib.rs:122
[task 2024-03-22T12:20:22.327Z] 12:20:22 INFO - Initializing stack-fixing for the first stack frame, this may take a while...
[task 2024-03-22T12:20:43.309Z] 12:20:43 INFO - GECKO(7916) | #01: RustMozCrash(char const*, int, char const*) [mozglue/static/rust/wrappers.cpp:17]
[task 2024-03-22T12:20:43.320Z] 12:20:43 INFO - GECKO(7916) | #02: core::ops::function::Fn::call<void (*)(ref$<core::panic::panic_info::PanicInfo>),tuple$<ref$<core::panic::panic_info::PanicInfo> > >(void (**)(core::panic::panic_info::PanicInfo*), core::panic::panic_info::PanicInfo*) [/rustc/07dca489ac2d933c78d3c5158e3f43beefeb02ce/library/core/src/ops/function.rs:79]
[task 2024-03-22T12:20:43.321Z] 12:20:43 INFO - GECKO(7916) | #03: std::panicking::rust_panic_with_hook() [git:github.com/rust-lang/rust:library/std/src/panicking.rs:07dca489ac2d933c78d3c5158e3f43beefeb02ce:786]
[task 2024-03-22T12:20:43.322Z] 12:20:43 INFO - GECKO(7916) | #04: std::panicking::begin_panic_handler::closure$0() [git:github.com/rust-lang/rust:library/std/src/panicking.rs:07dca489ac2d933c78d3c5158e3f43beefeb02ce:657]
[task 2024-03-22T12:20:43.323Z] 12:20:43 INFO - GECKO(7916) | #05: std::sys_common::backtrace::__rust_end_short_backtrace<std::panicking::begin_panic_handler::closure_env$0,never$>() [git:github.com/rust-lang/rust:library/std/src/sys_common/backtrace.rs:07dca489ac2d933c78d3c5158e3f43beefeb02ce:171]
[task 2024-03-22T12:20:43.324Z] 12:20:43 INFO - GECKO(7916) | #06: std::panicking::begin_panic_handler() [git:github.com/rust-lang/rust:library/std/src/panicking.rs:07dca489ac2d933c78d3c5158e3f43beefeb02ce:645]
[task 2024-03-22T12:20:43.324Z] 12:20:43 INFO - GECKO(7916) | #07: core::panicking::panic_fmt() [git:github.com/rust-lang/rust:library/core/src/panicking.rs:07dca489ac2d933c78d3c5158e3f43beefeb02ce:72]
[task 2024-03-22T12:20:43.325Z] 12:20:43 INFO - GECKO(7916) | #08: style::shared_lock::SharedRwLock::read() [servo/components/style/shared_lock.rs:125]
[task 2024-03-22T12:20:43.325Z] 12:20:43 INFO - GECKO(7916) | #09: geckoservo::glue::Servo_StyleSheet_HasRules(style::stylesheets::stylesheet::StylesheetContents*) [servo/ports/geckolib/glue.rs:2024]
[task 2024-03-22T12:20:43.326Z] 12:20:43 INFO - GECKO(7916) | #10: mozilla::StyleSheet::SetURIs(nsIURI*, nsIURI*, nsIURI*) [layout/style/StyleSheetInlines.h:20]
[task 2024-03-22T12:20:43.326Z] 12:20:43 INFO - GECKO(7916) | #11: mozilla::css::SheetLoadData::VerifySheetReadyToParse(nsresult, nsTSubstring<char> const&, nsTSubstring<char> const&, nsIChannel*, nsIURI*, nsIPrincipal*) [layout/style/Loader.cpp:859]
[task 2024-03-22T12:20:43.327Z] 12:20:43 INFO - GECKO(7916) | #12: mozilla::css::StreamLoader::OnStopRequest(nsIRequest*, nsresult) [layout/style/StreamLoader.cpp:159]
[task 2024-03-22T12:20:43.328Z] 12:20:43 INFO - GECKO(7916) | #13: mozilla::css::StreamLoader::OnDataFinished(nsresult) [layout/style/StreamLoader.cpp:245]
[task 2024-03-22T12:20:43.329Z] 12:20:43 INFO - GECKO(7916) | #14: mozilla::net::HttpChannelChild::SendOnDataFinished(nsresult const&) [netwerk/protocol/http/HttpChannelChild.cpp:843]
[task 2024-03-22T12:20:43.329Z] 12:20:43 INFO - GECKO(7916) | #15: std::_Func_impl_no_alloc<`lambda at /builds/worker/checkouts/gecko/netwerk/protocol/http/HttpChannelChild.cpp:905:9',void>::_Do_call() [/builds/worker/fetches/vs/VC/Tools/MSVC/14.39.33519/include/functional:905]
[task 2024-03-22T12:20:43.330Z] 12:20:43 INFO - GECKO(7916) | #16: mozilla::net::ChannelEventQueue::FlushQueue() [netwerk/ipc/ChannelEventQueue.cpp:94]
[task 2024-03-22T12:20:43.330Z] 12:20:43 INFO - GECKO(7916) | #17: mozilla::net::ChannelEventQueue::ResumeInternal::CompleteResumeRunnable::Run() [netwerk/ipc/ChannelEventQueue.cpp:153]
[task 2024-03-22T12:20:43.331Z] 12:20:43 INFO - GECKO(7916) | #18: mozilla::TaskQueue::Runner::Run() [xpcom/threads/TaskQueue.cpp:264]
[task 2024-03-22T12:20:43.331Z] 12:20:43 INFO - GECKO(7916) | #19: nsThreadPool::Run() [xpcom/threads/nsThreadPool.cpp:343]
[task 2024-03-22T12:20:43.331Z] 12:20:43 INFO - GECKO(7916) | #20: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1194]
[task 2024-03-22T12:20:43.332Z] 12:20:43 INFO - GECKO(7916) | #21: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:480]
[task 2024-03-22T12:20:43.332Z] 12:20:43 INFO - GECKO(7916) | #22: mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:301]
[task 2024-03-22T12:20:43.333Z] 12:20:43 INFO - GECKO(7916) | #23: MessageLoop::RunHandler() [ipc/chromium/src/base/message_loop.cc:364]
[task 2024-03-22T12:20:43.333Z] 12:20:43 INFO - GECKO(7916) | #24: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:346]
[task 2024-03-22T12:20:43.334Z] 12:20:43 INFO - GECKO(7916) | #25: nsThread::ThreadFunc(void*) [xpcom/threads/nsThread.cpp:372]
[task 2024-03-22T12:20:43.527Z] 12:20:43 INFO - GECKO(7916) | #26: _PR_NativeRunThread(void*) [nsprpub/pr/src/threads/combined/pruthr.c:408]
[task 2024-03-22T12:20:43.529Z] 12:20:43 INFO - GECKO(7916) | #27: pr_root(void*) [nsprpub/pr/src/md/windows/w95thred.c:140]
[task 2024-03-22T12:20:43.532Z] 12:20:43 INFO - fix-stacks: error: failed to read debug info file `ucrtbase.pdb` for `C:\Windows\System32\ucrtbase.dll`
[task 2024-03-22T12:20:43.532Z] 12:20:43 INFO - fix-stacks: note: this is expected and harmless for all PDB files on opt automation runs
[task 2024-03-22T12:20:43.533Z] 12:20:43 INFO - fix-stacks: The system cannot find the file specified. (os error 2)
[task 2024-03-22T12:20:43.534Z] 12:20:43 INFO - GECKO(7916) | #28: recalloc [C:\Windows\System32\ucrtbase.dll + 0x29363]
[task 2024-03-22T12:20:43.537Z] 12:20:43 INFO - fix-stacks: error: failed to read debug info file `wkernel32.pdb` for `C:\Windows\System32\KERNEL32.DLL`
[task 2024-03-22T12:20:43.537Z] 12:20:43 INFO - fix-stacks: note: this is expected and harmless for all PDB files on opt automation runs
[task 2024-03-22T12:20:43.538Z] 12:20:43 INFO - fix-stacks: The system cannot find the file specified. (os error 2)
[task 2024-03-22T12:20:43.538Z] 12:20:43 INFO - GECKO(7916) | #29: BaseThreadInitThunk [C:\Windows\System32\KERNEL32.DLL + 0x1257d]
[task 2024-03-22T12:20:43.637Z] 12:20:43 INFO - GECKO(7916) | #30: patched_BaseThreadInitThunk(int, void*, void*) [toolkit/xre/dllservices/mozglue/WindowsDllBlocklist.cpp:558]
[task 2024-03-22T12:20:43.653Z] 12:20:43 INFO - fix-stacks: error: failed to read debug info file `wntdll.pdb` for `C:\Windows\SYSTEM32\ntdll.dll`
[task 2024-03-22T12:20:43.653Z] 12:20:43 INFO - fix-stacks: note: this is expected and harmless for all PDB files on opt automation runs
[task 2024-03-22T12:20:43.654Z] 12:20:43 INFO - fix-stacks: The system cannot find the file specified. (os error 2)
[task 2024-03-22T12:20:43.654Z] 12:20:43 INFO - GECKO(7916) | #31: RtlUserThreadStart [C:\Windows\SYSTEM32\ntdll.dll + 0x5aa58]
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Comment 4•2 years ago
|
||
A Pernosco session is available here: https://pernos.co/debug/BrhIGha-FvWb3uW-DLSFUg/index.html
Updated•2 years ago
|
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Comment 9•1 year ago
|
||
This is a regression from the OnDataFinished stuff. It seems debug-only tho, because it happens calling HasRules() inside a MOZ_ASSERT: https://searchfox.org/mozilla-central/rev/ee2ad260c25310a9fbf96031de05bbc0e94394cc/layout/style/StyleSheetInlines.h#17-26
Updated•1 year ago
|
Comment 10•1 year ago
|
||
Set release status flags based on info from the regressing bug 1864817
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 14•1 year ago
|
||
I will have a look at this in the next couple of weeks
Comment 15•1 year ago
•
|
||
Probably not S2-level (i.e. actively ruining users' days) given that this is debug-only per comment 9 --> relaxing to S3, though feel free to set back to S2 if you're seeing something that I'm not here.
| Comment hidden (Intermittent Failures Robot) |
Comment 17•1 year ago
|
||
Because of the severity and priority rating, I’m marking this fix-optional for current releases, since the team is aware and has rated the issue.
While we are happy to take a patch, and uplift if it’s requested, we don’t need to keep looking at the bug in weekly regression triage.
| Comment hidden (Intermittent Failures Robot) |
Comment 20•1 year ago
|
||
Copying crash signatures from duplicate bugs.
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 49•1 year ago
|
||
Comment 50•1 year ago
|
||
Comment 51•1 year ago
|
||
| bugherder | ||
Updated•1 year ago
|
| Comment hidden (Intermittent Failures Robot) |
Description
•