Bug 1887866 - ensure HasRules() is invoked from main thread. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D232645