layout/style/StyleSheetInlines.h
@@ -17,8 +17,8 @@ namespace mozilla {
 void StyleSheet::SetURIs(nsIURI* aSheetURI, nsIURI* aOriginalSheetURI,
                          nsIURI* aBaseURI) {
   MOZ_ASSERT(aSheetURI && aBaseURI, "null ptr");
-  MOZ_ASSERT(!HasRules() && !IsComplete(),
-             "Can't call SetURIs on sheets that are complete or have rules");
+  // HasRules() should be accessed only on the main thread
+  MOZ_ASSERT_IF(NS_IsMainThread(), !HasRules() && !IsComplete());
   StyleSheetInfo& info = Inner();
   info.mSheetURI = aSheetURI;
   info.mOriginalSheetURI = aOriginalSheetURI;
